Tab Align correction

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#tab > button{
+#tab{
     margin-left: auto;
     margin-right: 0;
 }
